kustomize/parlassets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlassets
  labels:
    app: parlassets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlassets
  template:
    metadata:
      labels:
        app: parlassets
    spec:
      containers:
        - name: parlassets
          image: parlassets-trbovlje
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 25Mi
              cpu: 25m
            limits:
              memory: 25Mi
              cpu: 25m
