kustomize/parlassets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlassets
spec:
  selector:
    app: parlassets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
